# lab5

./: .travis.yml  CMakeLists.txt  README.md
MultiStack/: MultiStack.cpp
StackLib/: Stack.cpp  Stack.h
Steck/: CMakeLists.txt  main.cpp
SteckLib/: Steck.h
test/: CMakeLists.txt  test_MultiStack.cpp  test_TSteck.cpp
